# github4j

./: .gitignore  AGENTS.md  README.md  embed.py  pyproject.toml  seed.py  verify.py
.plans/: prd-github-wrapped-neo4j.md  progress-github-wrapped-neo4j.txt  tasks-github-wrapped-neo4j.yml
dashboards/: github-wrapped.json
data/: persons.csv  repos.csv
docs/: index.html
import/: 01_persons.cypher  02_repos.cypher  03_files.cypher  04_prs.cypher  05_reviews.cypher  06_files_touched.cypher  schema.cypher  verify.cypher
mcp_server/: main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  vercel.json
notebooks/: github_gds.ipynb
