[project]
name = "github4j-mcp-server"
version = "0.1.0"
description = "GitHub Wrapped — FastAPI MCP server with Neo4j query tools"
requires-python = ">=3.11"
dependencies = [
    "neo4j-rust-ext>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false
dev-dependencies = []
